Display fix if the modal is too high

--- a/css/style.css
+++ b/css/style.css
@@ -1316,6 +1316,7 @@ font-size: 26px;
     position: relative;
     margin: auto;
     padding: 0;
+    padding-bottom: 80px;
     width: 900px;
     /*-webkit-animation-name: animatetop;*/
     /*-webkit-animation-duration: 0.4s;*/
